fix: show as much of the resolved IPv6 address on mobile devices

--- a/src/assets/less/components/results-table-output.less
+++ b/src/assets/less/components/results-table-output.less
@@ -398,9 +398,12 @@
 							}
 
 							span {
+								white-space: nowrap;
+							}
+
+							.text-ellipsis {
 								overflow: hidden;
 								text-overflow: ellipsis;
-								white-space: nowrap;
 							}
 
 							.c-placeholder-skeleton {
@@ -447,6 +450,7 @@
 							align-items: center;
 							flex-grow: 1;
 							width: 100%;
+							gap: 8px;
 							font-size: 14px;
 							font-weight: 400;
 							line-height: 20px;
